[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anms-aricodec"
version = "0.0.0"
authors = [
]
description = "ARI CODEC service"
#readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
  "anms-ace ~=1.0.0",
  "paho-mqtt ~=1.6.1",
  "sqlalchemy ~=1.4.42",
  "psycopg2-binary ~=2.9.5",
]

[project.optional-dependencies]
test = [
  "pytest ~=7.1.2",
  "pytest-cov ~=3.0.0",
  "coverage ~=6.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["aricodec"]
