[build-system]
requires = ["setuptools>=62.3"]
build-backend = "setuptools.build_meta"

[project]
name = "anms-aricodec"
version = "0.0.0"
authors = [
  { name="JHU/APL", email="dtnma-support@jhuapl.edu" },
]
description = "ARI CODEC service"
#readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
  "dtnma-ace",
  "paho-mqtt ~=1.6.1",
  "sqlalchemy ~=1.4.42",
  "psycopg2-binary ~=2.9.5",
]

[project.optional-dependencies]
test = [
  "pytest ~=7.1.2",
  "pytest-cov ~=3.0.0",
  "coverage ~=6.5.0",
]
flake8 = [
  "flake8",
  "flake8_pyproject",
  "flake8_formatter_junit_xml",
]
ruff = [
  "ruff",
]

[tool.autopep8]
max_line_length = 160

[tool.flake8]
max-line-length=160

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E", "W", "F"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["aricodec"]
